package io.patterns.creational.abstractfactory;

public abstract class Layout {
}
