package io.patterns.creational.abstractfactory.problem;

import io.patterns.creational.abstractfactory.Image;

class NarrowImage extends Image {
}
