package io.patterns.creational.abstractfactory.problem;

import io.patterns.creational.abstractfactory.Button;

class PushButton extends Button {
}
