package io.patterns.creational.abstractfactory.problem;

import io.patterns.creational.abstractfactory.Button;

class TouchButton extends Button {
}
