package io.patterns.creational.abstractfactory.problem;

import io.patterns.creational.abstractfactory.Image;

class WideImage extends Image {
}
