package io.patterns.creational.abstractfactory.problem;

import io.patterns.creational.abstractfactory.Layout;

class Window extends Layout {
}
