-@startuml
abstract class Layout
abstract  class Image
abstract  class Button


class Window extends Layout
class WideImage extends Image
class PushButton extends Button


class Screen extends Layout
class NarrowImage extends Image
class TouchButton extends Button



Monitor -- Layout: draw >
Monitor -- Image: draw >
Monitor -- Button: draw >
@enduml